<resources>
    <string name="login_button_text">Login</string>
    <string name="account_circle_description">Account icon</string>
    <string name="app_name">AppleStyleLogin</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="social_login_text">Or login with</string>
    <string name="facebook_icon_description">Facebook icon</string>
    <string name="google_icon_description">Google icon</string>
    <string name="twitter_icon_description">Twitter icon</string>
</resources>
