<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/account_circle"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/account_circle_description" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:background="@drawable/rounded_edit_text"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            android:autofillHints="username"
            android:textColor="@android:color/black"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:background="@drawable/rounded_edit_text"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textColor="@android:color/black"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:id="@+id/tv_social_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_login_text"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="83dp"
                android:layout_height="59dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/facebook_icon"
                android:contentDescription="@string/facebook_icon_description" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="57dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/google_icon"
                android:contentDescription="@string/google_icon_description" />

            <ImageView
                android:layout_width="69dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_twitter"
                android:contentDescription="@string/twitter_icon_description" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
